welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:39: error: not found: value ||
		if (testd==true || estFaceMur())||(testg==true||testdd==true) {
                                                ^